--- a/src/gui/MainView.fxml
+++ b/src/gui/MainView.fxml
@@ -6,11 +6,11 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.VBox?>
 
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.211" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MainViewController">
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="721.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MainViewController">
    <content>
-      <VBox prefHeight="344.0" prefWidth="505.0">
+      <VBox prefHeight="344.0" prefWidth="718.0">
          <children>
-            <MenuBar>
+            <MenuBar prefHeight="25.0" prefWidth="716.0">
               <menus>
                 <Menu mnemonicParsing="false" text="Registration">
                   <items>
